tests/expected/err-funass2.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/err-funass2.uc:[4:9]: error: cannot take an address of a function
      f = &main; // error: taking address of a function
          ^

1
